--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Animated Login Form</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap"
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
