--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <img class="wave" src="img/wave.png" />
     <div class="container">
       <div class="img">
-        <img src="img/bg.svg" />
+        <img src="img/bg.png" />
       </div>
-      <div class="login-content">
+      <div class="login-container">
         <form action="index.html">
-          <img src="img/avatar.svg" />
+          <img src="img/avatar.png" />
           <h2 class="title">Welcome</h2>
           <div class="input-div one">
             <div class="i">
               <i class="fas fa-user"></i>
             </div>
-            <div class="div">
+            <div>
               <h5>Username</h5>
               <input type="text" class="input" />
             </div>
@@ -33,12 +32,12 @@
             <div class="i">
               <i class="fas fa-lock"></i>
             </div>
-            <div class="div">
+            <div>
               <h5>Password</h5>
               <input type="password" class="input" />
             </div>
           </div>
-          <a href="#">Forgot Password?</a>
+          <a href="#">Forget Password?</a>
           <input type="submit" class="btn" value="Login" />
         </form>
       </div>
