--- a/index.html
+++ b/index.html
@@ -7,39 +7,46 @@
       href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;1,100&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
     <div class="container">
-      <div class="img">
-        <img src="img/bg.png" />
-      </div>
-      <div class="login-container">
-        <form action="index.html">
-          <img src="img/avatar.png" />
-          <h2 class="title">Welcome</h2>
-          <div class="input-div one">
-            <div class="i">
+      <div class="forms-container">
+        <div class="signin-signup">
+          <form action="" class="sign-in-form">
+            <h2 class="title">Sign in</h2>
+            <div class="input-field">
               <i class="fas fa-user"></i>
+              <input type="text" placeholder="Username" />
             </div>
-            <div>
-              <h5>Username</h5>
-              <input type="text" class="input" />
-            </div>
-          </div>
-          <div class="input-div pass">
-            <div class="i">
+            <div class="input-field">
               <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Password" />
             </div>
-            <div>
-              <h5>Password</h5>
-              <input type="password" class="input" />
+            <input type="submit" value="Login" class="btn solid" />
+
+            <p class="social-text">Or Sign in with social platforms</p>
+            <div class="social-media">
+              <a href="#" class="social-icon">
+                <i class="fab fa-facebook"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-google"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
             </div>
-          </div>
-          <a href="#">Forget Password?</a>
-          <input type="submit" class="btn" value="Login" />
-        </form>
+          </form>
+        </div>
       </div>
     </div>
     <script type="text/javascript" src="js/main.js"></script>
